# pi-llm

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/api/: routes.py  schemas.py
app/core/: auth.py  keys.py  llm.py  queue.py
app/services/: inference.py
configs/: pi5-fast.env
models/: .gitkeep
scripts/: activate.sh  download_model.py  gen_key.py  gen_key.sh  setup.sh  start.sh  uninstall.sh
