[project]
name = "pi-llm"
version = "0.1.0"
description = "On-Demand LLM on Raspberry Pi 5 with Ollama-managed models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "llama-cpp-python>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "huggingface-hub>=0.25.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
pi-llm = "app.main:run"
